cambios en creacion de listas